feat: introduce market snapshot projection for SmartRate