@@ -1,10 +1,10 @@
 package com.bolaneradar.backend.service.smartrate;
 
-import com.bolaneradar.backend.entity.core.MortgageRate;
 import com.bolaneradar.backend.entity.enums.MortgageTerm;
 import com.bolaneradar.backend.entity.enums.RateType;
 import com.bolaneradar.backend.entity.enums.smartrate.RatePreference;
 import com.bolaneradar.backend.repository.MortgageRateRepository;
+import com.bolaneradar.backend.repository.projection.MarketRateSnapshotRow;
 import com.bolaneradar.backend.service.smartrate.model.MarketSnapshot;
 import org.springframework.stereotype.Service;
 
@@ -28,45 +28,43 @@ public class SmartRateMarketDataServiceImpl implements SmartRateMarketDataServic
     }
 
     // =========================================================================
-    // 1. Bankens senaste snittränta
+    // 1. Bankens senaste snittränta (används endast i context-build)
     // =========================================================================
     @Override
     public BigDecimal getBankAverageRate(Long bankId, MortgageTerm term) {
-
-        MortgageRate rate = repo.findFirstByBankIdAndTermAndRateTypeOrderByEffectiveDateDesc(
+        return repo.findFirstByBankIdAndTermAndRateTypeOrderByEffectiveDateDesc(
                 bankId,
                 term,
                 RateType.AVERAGERATE
-        );
-
-        return rate != null ? rate.getRatePercent() : null;
+        ) != null
+                ? repo.findFirstByBankIdAndTermAndRateTypeOrderByEffectiveDateDesc(
+                bankId, term, RateType.AVERAGERATE
+        ).getRatePercent()
+                : null;
     }
 
     // =========================================================================
-    // 2. Marknadens bästa snittränta
+    // 2. Marknadens bästa snittränta (fallback / context)
     // =========================================================================
     @Override
     public BigDecimal getMarketBestRate(MortgageTerm term) {
-
-        List<MortgageRate> latest = repo.findLatestRatesByType(RateType.AVERAGERATE);
-
-        return latest.stream()
-                .filter(m -> m.getTerm() == term)
-                .map(MortgageRate::getRatePercent)
+        return repo.findLatestRatesByType(RateType.AVERAGERATE).stream()
+                .filter(r -> r.getTerm() == term)
+                .map(r -> r.getRatePercent())
                 .min(Comparator.naturalOrder())
                 .orElse(null);
     }
 
     // =========================================================================
-    // 3. Marknadens median snittränta
+    // 3. Marknadens median snittränta (fallback / context)
     // =========================================================================
     @Override
     public BigDecimal getMarketMedianRate(MortgageTerm term) {
 
         List<BigDecimal> values = repo.findLatestRatesByType(RateType.AVERAGERATE)
                 .stream()
-                .filter(m -> m.getTerm() == term)
-                .map(MortgageRate::getRatePercent)
+                .filter(r -> r.getTerm() == term)
+                .map(r -> r.getRatePercent())
                 .sorted()
                 .toList();
 
@@ -77,7 +75,9 @@ public class SmartRateMarketDataServiceImpl implements SmartRateMarketDataServic
 
         return (size % 2 == 1)
                 ? values.get(mid)
-                : values.get(mid - 1).add(values.get(mid)).divide(BigDecimal.valueOf(2), 2, RoundingMode.HALF_UP);
+                : values.get(mid - 1)
+                .add(values.get(mid))
+                .divide(BigDecimal.valueOf(2), 2, RoundingMode.HALF_UP);
     }
 
     // =========================================================================
@@ -88,17 +88,19 @@ public class SmartRateMarketDataServiceImpl implements SmartRateMarketDataServic
 
         YearMonth ym = YearMonth.from(date);
 
-        LocalDate monthStart = ym.atDay(1);
-        LocalDate monthEnd = ym.plusMonths(1).atDay(1);
-
-        MortgageRate rate = repo.findAverageRateForBankAndTermAndMonth(
+        return repo.findAverageRateForBankAndTermAndMonth(
                 bankId,
                 MortgageTerm.VARIABLE_3M,
-                monthStart,
-                monthEnd
-        );
-
-        return rate != null ? rate.getRatePercent() : null;
+                ym.atDay(1),
+                ym.plusMonths(1).atDay(1)
+        ) != null
+                ? repo.findAverageRateForBankAndTermAndMonth(
+                bankId,
+                MortgageTerm.VARIABLE_3M,
+                ym.atDay(1),
+                ym.plusMonths(1).atDay(1)
+        ).getRatePercent()
+                : null;
     }
 
     // =========================================================================
@@ -106,31 +108,24 @@ public class SmartRateMarketDataServiceImpl implements SmartRateMarketDataServic
     // =========================================================================
     @Override
     public List<MortgageTerm> getTermsForPreference(RatePreference pref) {
-
         return switch (pref) {
-
-            case VARIABLE_3M ->
-                    List.of(MortgageTerm.VARIABLE_3M);
-
-            case SHORT ->
-                    List.of(
-                            MortgageTerm.FIXED_1Y,
-                            MortgageTerm.FIXED_2Y,
-                            MortgageTerm.FIXED_3Y
-                    );
-
-            case LONG ->
-                    List.of(
-                            MortgageTerm.FIXED_4Y,
-                            MortgageTerm.FIXED_5Y,
-                            MortgageTerm.FIXED_7Y,
-                            MortgageTerm.FIXED_10Y
-                    );
+            case VARIABLE_3M -> List.of(MortgageTerm.VARIABLE_3M);
+            case SHORT -> List.of(
+                    MortgageTerm.FIXED_1Y,
+                    MortgageTerm.FIXED_2Y,
+                    MortgageTerm.FIXED_3Y
+            );
+            case LONG -> List.of(
+                    MortgageTerm.FIXED_4Y,
+                    MortgageTerm.FIXED_5Y,
+                    MortgageTerm.FIXED_7Y,
+                    MortgageTerm.FIXED_10Y
+            );
         };
     }
 
     // =========================================================================
-    // 6. SNAPSHOT – ENDA NYA DELEN
+    // 6. SNAPSHOT – PRESTANDAOPTIMERAD (PROJECTION)
     // =========================================================================
     @Override
     public MarketSnapshot getMarketSnapshot(
@@ -138,74 +133,68 @@ public class SmartRateMarketDataServiceImpl implements SmartRateMarketDataServic
             Set<MortgageTerm> terms
     ) {
 
-        // ===== EN DB-QUERY =====
-        List<MortgageRate> latest =
-                repo.findLatestRatesByType(RateType.AVERAGERATE);
+        // EN query, inga entities
+        List<MarketRateSnapshotRow> rows =
+                repo.findMarketSnapshotRows(
+                        RateType.AVERAGERATE,
+                        List.copyOf(terms)
+                );
 
-        // =========================================================================
-        // Bankens snitträntor per term
-        // =========================================================================
-        var bankAvgByTerm = latest.stream()
-                .filter(r -> r.getBank() != null)
-                .filter(r -> r.getBank().getId().equals(bankId))
-                .filter(r -> terms.contains(r.getTerm()))
-                .collect(Collectors.toMap(
-                        MortgageRate::getTerm,
-                        MortgageRate::getRatePercent,
-                        (a, b) -> a
-                ));
+        // Bankens snittränta per term
+        Map<MortgageTerm, BigDecimal> bankAvgByTerm =
+                rows.stream()
+                        .filter(r -> r.getBankId().equals(bankId))
+                        .collect(Collectors.toMap(
+                                MarketRateSnapshotRow::getTerm,
+                                MarketRateSnapshotRow::getRatePercent,
+                                (a, b) -> a
+                        ));
 
-        // =========================================================================
         // Marknadens bästa ränta per term
-        // =========================================================================
-        var bestByTerm = latest.stream()
-                .filter(r -> terms.contains(r.getTerm()))
-                .collect(Collectors.groupingBy(
-                        MortgageRate::getTerm,
-                        Collectors.mapping(
-                                MortgageRate::getRatePercent,
-                                Collectors.minBy(Comparator.naturalOrder())
-                        )
-                ))
-                .entrySet().stream()
-                .filter(e -> e.getValue().isPresent())
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        e -> e.getValue().get()
-                ));
+        Map<MortgageTerm, BigDecimal> bestByTerm =
+                rows.stream()
+                        .collect(Collectors.groupingBy(
+                                MarketRateSnapshotRow::getTerm,
+                                Collectors.mapping(
+                                        MarketRateSnapshotRow::getRatePercent,
+                                        Collectors.minBy(Comparator.naturalOrder())
+                                )
+                        ))
+                        .entrySet().stream()
+                        .filter(e -> e.getValue().isPresent())
+                        .collect(Collectors.toMap(
+                                Map.Entry::getKey,
+                                e -> e.getValue().get()
+                        ));
 
-        // =========================================================================
         // Marknadens medianränta per term
-        // =========================================================================
-        var medianByTerm = latest.stream()
-                .filter(r -> terms.contains(r.getTerm()))
-                .collect(Collectors.groupingBy(
-                        MortgageRate::getTerm,
-                        Collectors.mapping(
-                                MortgageRate::getRatePercent,
-                                Collectors.toList()
-                        )
-                ))
-                .entrySet().stream()
-                // filtrera bort tomma listor
-                .filter(e -> !e.getValue().isEmpty())
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        e -> {
-                            List<BigDecimal> values = e.getValue().stream()
-                                    .sorted()
-                                    .toList();
+        Map<MortgageTerm, BigDecimal> medianByTerm =
+                rows.stream()
+                        .collect(Collectors.groupingBy(
+                                MarketRateSnapshotRow::getTerm,
+                                Collectors.mapping(
+                                        MarketRateSnapshotRow::getRatePercent,
+                                        Collectors.toList()
+                                )
+                        ))
+                        .entrySet().stream()
+                        .collect(Collectors.toMap(
+                                Map.Entry::getKey,
+                                e -> {
+                                    List<BigDecimal> values = e.getValue().stream()
+                                            .sorted()
+                                            .toList();
 
-                            int size = values.size();
-                            int mid = size / 2;
+                                    int size = values.size();
+                                    int mid = size / 2;
 
-                            return (size % 2 == 1)
-                                    ? values.get(mid)
-                                    : values.get(mid - 1)
-                                    .add(values.get(mid))
-                                    .divide(BigDecimal.valueOf(2), 2, RoundingMode.HALF_UP);
-                        }
-                ));
+                                    return (size % 2 == 1)
+                                            ? values.get(mid)
+                                            : values.get(mid - 1)
+                                            .add(values.get(mid))
+                                            .divide(BigDecimal.valueOf(2), 2, RoundingMode.HALF_UP);
+                                }
+                        ));
 
         return new MarketSnapshot(
                 Map.copyOf(bestByTerm),
